added another files

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,39 +1,13 @@
-$primary-color: red;
-$secondary-color: rgba(255, 0, 0, 0.748);
-$tertiary-color: rgb(255, 0, 10);
+// Variables
+@import "./variables";
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+// Mixins
+@import "./mixins";
 
-body {
-  background-color: $primary-color;
-  color: black;
-}
+// Components
+@import "./components/header";
 
-.header {
-  background-color: blue;
-
-  &__nav {
-    width: 60%;
-
-    &__link-list {
-      display: flex;
-
-      &__item {
-        margin-right: 10px;
-
-        &__link {
-          text-decoration: none;
-          color: black;
-
-          &--red {
-            color: $primary-color;
-          }
-        }
-      }
-    }
-  }
-}
+// Pages
+@import "./pages/index";
+@import "./pages/about";
+@import "./pages/contact";
