--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,24 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box; }
-
-body {
-  background-color: red;
-  color: black; }
-
 .header {
   background-color: blue; }
   .header__nav {
     width: 60%; }
     .header__nav__link-list {
-      display: flex; }
+      display: flex;
+      align-items: center;
+      justify-content: center; }
       .header__nav__link-list__item {
-        margin-right: 10px; }
+        margin-right: 10px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between; }
+        @media only screen and (max-width: 900px) {
+          .header__nav__link-list__item {
+            color: blue; } }
         .header__nav__link-list__item__link {
           text-decoration: none;
           color: black; }
           .header__nav__link-list__item__link--red {
             color: red; }
+          @media only screen and (max-width: 900px) {
+            .header__nav__link-list__item__link {
+              display: none; } }
