--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,12 @@
 // Components
 @import "./components/header";
 
+// Bootstrap imports
+@import "../bootstrap/scss/bootstrap-grid.scss";
+@import "../bootstrap/scss/mixins";
+@import "../bootstrap/scss/buttons";
+@import "../bootstrap/scss/navbar";
+
 // Pages
 @import "./pages/index";
 @import "./pages/about";
